--- a/src/components/AttachmentMenu.css
+++ b/src/components/AttachmentMenu.css
@@ -30,6 +30,7 @@
     border-radius: 5px;
     background-color: var(--black);
     animation: myAnimation 0.2s ease;
+    z-index: 3;
 }
 
 input[type="file"] {
