--- a/src/components/LiveCommentMenu.css
+++ b/src/components/LiveCommentMenu.css
@@ -1,4 +1,4 @@
-.mm-container{
+.lm-container{
     position: relative;
     display: flex;
     align-items: center;
@@ -7,9 +7,9 @@
     height: fit-content;
 }
 
-.mm-btn{
-    height: 25px;
-    width: 25px;
+.lm-btn{
+    height: 20px;
+    width: 20px;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -20,15 +20,15 @@
     transition: opacity 0.2s ease;
 }
 
-.mm-btn:hover{
+.lm-btn:hover{
     background-color: rgba(255, 255, 255, 0.178);
 }
 
-.mm-btn-img{
-    height: 20px;
+.lm-btn-img{
+    height: 15px;
 }
 
-.mm-menu-container{
+.lm-menu-container{
     position: absolute;
     bottom: 0px;
     height: fit-content;
@@ -46,7 +46,7 @@
     z-index: 3;
 }
 
-.mm-inner-btn{
+.lm-inner-btn{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -58,11 +58,11 @@
     padding: 5px 5px;
 }
 
-.mm-inner-btn:hover{
+.lm-inner-btn:hover{
     background-color: var(--hover);
 }
 
-.mm-img{
+.lm-img{
     height: 20px;
 }
 
