--- a/src/components/MediaView.css
+++ b/src/components/MediaView.css
@@ -4,7 +4,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.774);
+    background-color: var(--chatBoxBg);
     display: flex;
     flex-direction: column;
     padding: 30px;
