--- a/src/components/NavUserButton.css
+++ b/src/components/NavUserButton.css
@@ -37,11 +37,18 @@
     flex-direction: column;
 }
 
-.nub-name{
-    font-size: 1.1rem;
+.nub-username{
+    font-size: 1rem;
     letter-spacing: 0.05rem;
     margin: 0;
     color: var(--fontColor);
+}
+
+.nub-name{
+    font-size: 0.8rem;
+    letter-spacing: 0.05rem;
+    margin: 0;
+    color: var(--small);
 }
 
 .nub-btn{
