--- a/src/components/AudioPlayer.css
+++ b/src/components/AudioPlayer.css
@@ -39,8 +39,8 @@
   border-radius: 10px;
   background: linear-gradient(
     to right,
-    var(--black) 0%,
-    var(--black) var(--progress, 0%),
+    var(--small) 0%,
+    var(--small) var(--progress, 0%),
     #ddd var(--progress, 0%),
     #ddd 100%
   );
@@ -61,5 +61,13 @@
 .audio-time {
   font-size: 12px;
   color: var(--fontColor);
-  font-family: "GSM";
+  font-family: "RR";
+}
+
+.is-post{
+  margin: 10px;
+}
+
+.is-post-audio-slider::-webkit-slider-thumb{
+  background-color: var(--fontColor);
 }
