--- a/src/admin/Dashboard.css
+++ b/src/admin/Dashboard.css
@@ -1,12 +1,13 @@
-.dashboard{
+.admin-dashboard {
     display: flex;
     height: 100dvh;
     width: 100%;
 }
 
-.dashboard-container{
+.dashboard-container {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100dvh;
+    width: 100%;
 }
