--- a/src/components/ChatInfo.css
+++ b/src/components/ChatInfo.css
@@ -191,13 +191,20 @@ p{
     font-family: 'GM';
 }
 
-.delete-chat-msgs-btn{
+.delete-chat-btn{
     width: fit-content;
     font-size: 1rem;
     height: 30px;
     color: var(--black);
     background-color: var(--green);
     border: none;
+    border-radius: 15px;
+    font-family: 'GR';
+    padding: 4px;
+    transition: 0.3s all ease;
+}
+
+.delete-chat-btn:hover{
     border-radius: 5px;
 }
 
