--- a/src/components/ChatBox.css
+++ b/src/components/ChatBox.css
@@ -6,6 +6,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 260px;
+  cursor: pointer;
 }
 
 .chat-heading-and-btns-container{
@@ -15,7 +16,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: var(--hover);
-  padding: 10px 20px;
+  padding: 10px 10px;
   box-sizing: border-box;
   border-radius: 10px;
   flex-shrink: 0;
@@ -24,14 +25,22 @@
 .chatName-chatDp-container{
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
+}
+
+.chatDp-container {
+  height: 45px;
+  width: 45px;
+  border-radius: 70px;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
 }
 
 .chatDp{
-  height: 40px;
-  width: 40px;
-  border-radius: 70px;
-  border: 1px solid var(--green);
+  width: 45px;
+  border-radius: 100px;
 }
 
 .subscribe-btn{
@@ -40,16 +49,32 @@
   background-color: var(--green);
   color: var(--black);
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
+  padding: 0 8px;
+  font-family: 'GB';
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.subscribe-btn:hover {
+  border-radius: 4px;
 }
 
 .unsubscribe-btn{
-  border-radius: 5px;
+  border-radius: 50px;
   height: 30px;
   font-size: 0.9rem;
   background-color: var(--black);
   color: var(--green);
   border: 1px solid var(--green);
+  padding: 0 8px;
+  font-family: 'GB';
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.unsubscribe-btn:hover {
+  border-radius: 4px;
 }
 
 .chat-live-count{
@@ -151,6 +176,8 @@
   padding: 0 10px 10px 10px;
   scrollbar-color: var(--small) var(--chatBoxBg); /* thumb, track */
   scrollbar-width: thin;
+  -webkit-scrollbar-color: var(--small) var(--chatBoxBg);
+  -webkit-scrollbar-width: thin;
 }
 
 .filter-btn{
@@ -228,14 +255,14 @@
   align-items: center;
   flex-direction: row-reverse;
   gap: 10px;
-  margin: 8px 0;
+  margin: 4px 0;
 }
 
 .other-msg-container{
   display: flex;
   justify-content: left;
   gap: 10px;
-  margin: 8px 0;
+  margin: 4px 0;
 }
 
 .my-msg-container .msg-menu-btns-container,
@@ -259,33 +286,34 @@
 }
 
 .msg-user-dp-container{
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   display: grid;
   place-items: center;
   overflow: hidden;
-  margin-top: 12px;
+  margin-top: 25px;
   border-radius: 20px;
 }
 
 .msg-user-dp{
-  height: 30px;
+  height: 35px;
   object-fit: contain;
 }
 
 .my-msg {
   position: relative;
   text-align: left;
-  margin: 5px 0;
   width: fit-content;
   background-color: var(--otherMsgBg);
   color: var(--fontColor);
-  padding: 2px 4px;
-  border-radius: 5px;
+  padding: 5px 7px;
+  border-right: 4px solid #1abb02;
+  border-radius: 5px 2px 2px 5px;
   max-width: 300px;
   display: flex;
   flex-direction: column;
   min-width: 90px;
+  margin-right: 4px;
 }
 
 .reply-msg-container{
@@ -318,38 +346,28 @@
 .other-msg {
   position: relative;
   text-align: left;
-  margin: 5px 0;
   width: fit-content;
   background-color: var(--otherMsgBg);
   color: var(--fontColor);
-  padding: 5px 8px;
+  padding: 5px 7px;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   max-width: 300px;
+  min-width: 72px;
+  margin-left: 47px;
+}
 
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 0;
-    height: 0;
-    border: 8px solid transparent;
-  }
-
-  &.left::after {
-    left: -8px;
-    border-right-color: var(--otherMsgBg);
-  }
+.has-reactions{
+  margin-bottom: 18px
 }
 
 .reaction-bubble {
-  background: var(--hover);
-  border: 1px solid var(--chatBoxBg);
-  border-radius: 12px;
-  padding: 1px 6px;
-  font-size: 0.8rem;
+  background: var(--chatBoxBg);
+  border: 1px solid var(--borderColor);
+  border-radius: 25px;
+  padding: 3px 6px;
+  font-size: 0.9rem;
   display: flex;
   align-items: center;
   gap: 2px;
@@ -359,12 +377,17 @@
   ;
 }
 
+.reaction-count{
+  font-family: 'GB';
+  color: var(--fontColor);
+}
+
 .my-reactions,
 .other-reactions {
   position: absolute;
   display: flex;
   gap: 4px;
-  bottom: -14px;
+  bottom: -20px;
 }
 
 .my-reactions {
@@ -372,11 +395,11 @@
 }
 
 .other-reactions {
-  left: 8px; 
+  left: 5px; 
 }
 
 .sender-name{
-  font-family: 'RM';
+  font-family: 'RR';
   margin: 0 0 3px 0;
 }
 
@@ -428,10 +451,28 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  margin: 0 5px 0 40px;
 }
 
 .other-media-msg .msg-text{
   color: var(--fontColor);
+}
+
+.left{
+  margin-top: 26px;
+  margin-left: 0;
+}
+
+.left::before {
+  background: var(--otherMsgBg);
+  bottom: 4px;
+  content: "";
+  height: 7px;
+  top: 0px;
+  left: -6px;
+  position: absolute;
+  width: 14px;
+  border-radius: 0px 6px 10px 35px;
 }
 
 .msg-media-wrapper{
@@ -501,7 +542,7 @@
 
 .msg-time{
   color: var(--small);
-  font-size: 0.8rem;
+  font-size: 0.65rem;
   text-align: right;
   margin-top: 4px;
 }
@@ -541,6 +582,7 @@
   box-sizing: border-box;
   gap: 5px;
   flex-shrink: 0;
+  align-items: center;
 }
 
 .replyee-msg-container{
@@ -603,14 +645,23 @@
 }
 
 .emoji-btn{
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
   border-radius: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #232326;
   border: none;
+  background: none;
+  transition: 0.2s all ease ;
+}
+
+.emoji-btn:hover{
+  background-color: var(--hover);
+}
+
+.emoji-btn img{
+  height: 23px;
 }
 
 .img-input{
@@ -623,7 +674,7 @@
 .msg-input{
   width: 100%;
   padding: 8px;
-  border-radius: 6px;
+  border-radius: 25px;
   border: 1px solid var(--small);
   background-color: var(--hover);
   color: var(--fontColor);
@@ -633,6 +684,7 @@
   height: 22px;
   font-size: 1rem;
   resize: none;
+  margin: 0 10px;
 }
 
 .recording-indicator{
