--- a/src/components/ChatInfo.css
+++ b/src/components/ChatInfo.css
@@ -31,7 +31,7 @@
     position: relative;
     height: 65px;
     width: 65px;
-    border: 1px solid var(--green);
+    border: 2px solid var(--green);
     border-radius: 70px;
 }
 
@@ -52,11 +52,12 @@
     color: var(--fontColor);
     display: flex;
     justify-content: space-between;
-    padding: 0;
+    padding: 4px 8px;
     margin: 0;
     align-items: center;
     font-size: 14px;
-    border: none;
+    border: 1px solid var(--green);
+    border-radius: 4px;
     font-family: 'GB';
     cursor: pointer;
 }
@@ -133,6 +134,27 @@
 .chat-info-participant-container{
     display: flex;
     justify-content: space-between;
+}
+
+.chat-info-participant-dp-container{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.participant-img-container{
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    border: 2px solid var(--green);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.participant-img-container img{
+    height: 30px;
 }
 
 .participant-remove-btn{
